--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     tools:context=".MainActivity"
     android:id="@+id/root"
-    android:background="#000000" >
+    android:background="#FF232E31" >
     
     <LinearLayout
        
