--- a/res/layout/recipe_activity.xml
+++ b/res/layout/recipe_activity.xml
@@ -5,5 +5,19 @@
     android:orientation="vertical"
     android:background="#FF232E31" >
     
+    <Button 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Recipe"
+        android:layout_gravity="center"
+        android:layout_marginTop="40sp"
+        android:text="@string/recipe"/>
+    <Button 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/NewRecipe"
+        android:layout_gravity="center"
+        android:layout_marginTop="20sp"
+        android:text="@string/nuova_ricetta"/>
 
 </LinearLayout>
